tests/spec/emit/snapshots/ok_binding_shadowing_a_live_name_gets_a_fresh_header_name.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  import "go:fmt"
  import "go:strconv"
  
  fn main() {
    let n = 1
    match strconv.Atoi("2") {
      Ok(n) => fmt.Println(n),
      Err(_) => fmt.Println(n),
    }
  }
---
package main

import (
	"fmt"
	"strconv"
)

func main() {
	n := 1
	if n_1, err := strconv.Atoi("2"); err == nil {
		fmt.Println(n_1)
	} else {
		fmt.Println(n)
	}
}
