tests/spec/emit/snapshots/ok_with_same_type_params.snap
---
source: tests/spec/emit/types.rs
description: |
  
  fn test() -> Result<string, string> {
    Ok("hello")
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test() lisette.Result[string, string] {
	return lisette.MakeResultOk[string, string]("hello")
}
