tests/spec/emit/snapshots/omitted_return_in_callback_param_stays_void.snap
---
source: tests/spec/emit/types.rs
description: |
  
  fn run(callback: fn(int)) {}
---
package main

func run(_ func(int)) {}
