tests/spec/emit/snapshots/option_assigned_to_go_unknown_field_unwraps_to_any.snap
---
source: tests/spec/emit/types.rs
description: |
  
  import "go:example.com/dyn"
  
  fn main() {
    let mut obj = dyn.Bag { Decl: "", Data: None }
    obj.Decl = None
    let _ = obj
  }
---
package main

import (
	"example.com/dyn"
	lisette "github.com/ivov/lisette/prelude"
)

func main() {
	obj := dyn.Bag{
		Decl: "",
		Data: nil,
	}
	obj.Decl = nil
	_ = obj
}
