tests/spec/emit/snapshots/option_assignment_from_function_call.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  fn get_value() -> Option<int> {
    Some(42)
  }
  
  fn test() {
    let mut opt: Option<int> = None;
    opt = get_value();
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func getValue() (int, bool) {
	return 42, true
}

func test() {
	_ = lisette.MakeOptionNone[int]()
	getValue()
}
