tests/spec/emit/snapshots/option_assignment_from_variable.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  fn test() {
    let x = Some(42);
    let mut opt: Option<int> = None;
    opt = x;
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test() {
	x := lisette.MakeOptionSome(42)
	_ = lisette.MakeOptionNone[int]()
	_ = x
}
