tests/spec/emit/snapshots/option_assignment_with_none.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  fn test() {
    let mut opt: Option<int> = Some(1);
    opt = None;
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test() {
	lisette.MakeOptionSome(1)
	_ = lisette.MakeOptionNone[int]()
}
